# MolDeTr

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  environment.yml  plotting.py  pyproject.toml  requirements-lock-linux64.txt  theme.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  my_spectrum_didnt_work.md
.github/workflows/: ci.yml
conf/: config_big.yaml
conf/files/: double_multiplet.yaml  multi_multiplet.yaml  single_multiplet.yaml  spin_system.yaml  spin_system_big.yaml
conf/fixed_distortions/: SNR_100.yaml  SNR_20.yaml  SNR_2500.yaml  SNR_500.yaml
deploy/hf_space/: README.md  requirements.txt
docs/: DATA_SCHEMA.md  INPUT_FORMAT.md  SCOPE.md  USAGE_NOTES.md  _config.yml  index.md
examples/: README.md  roi_S10_example.npz  roi_S8_example.npz  synthetic_example.npz
moldetr/: cli.py  config.py  distort.py  inference.py  labels.py  plotstyle.py  postprocess.py  reproducibility.py  simulate.py  validation.py  visualization.py
moldetr/assets/: extrema.txt
moldetr/dataloader/: data_augmentation.py  dataloader.py  normalization.py  shimming.py  transforms.py
moldetr/learner/: multi_multiplet_learner.py
moldetr/loss/: combined_loss.py  helper_funcs.py  individual_losses.py
moldetr/matcher/: matcher.py
moldetr/metrics/: multiplet_metrics.py
moldetr/model/: classes_and_interfaces.py  deformable_detr_nmr.py  deformable_transformer.py  dnn.py  fpn_backbone.py  positional_embedding.py  resnet_block.py  utils.py
moldetr/model/ops/: make.sh
moldetr/model/ops/functions/: ms_deform_attn_func.py
moldetr/model/ops/modules/: ms_deform_attn.py
notebooks/: MolDeTr_colab_demo.ipynb  MolDeTr_quickstart.ipynb
scripts/: aggregate_experimental.py  download_weights.py  evaluate_experimental.py  evaluate_synthetic.py  gen_banner.py  gen_molecule_figure.py  plot_deposit_spectrum.py  predict.py  quick_validation.py  simulate_and_predict.py  train.py
structured_output/: README.md  all_rois_combined.json  experimental_matched_pairs.json  roi_S1.json  roi_S10.json  roi_S12.json  roi_S13.json  roi_S2.json  roi_S3.json  roi_S4.json  roi_S5.json  roi_S5_R2.json  roi_S6.json  roi_S7.json  roi_S8.json  roi_S9.json  roi_definitions.json
tests/: conftest.py  test_app_load.py  test_app_predict.py  test_app_simulate.py  test_app_spec_report.py  test_cli.py  test_config.py  test_cpu_cuda_equivalence.py  test_dataloader_sparse_ids.py  test_distort.py  test_e2e_client.py  test_labels.py  test_loss.py  test_matcher.py  test_metrics.py  test_model_contract.py  test_model_smoke.py  test_plotstyle.py  test_plotting.py  test_postprocess_aggregate.py  test_properties.py  test_reproducibility.py  test_robustness.py  test_schema_contract.py  test_scripts.py  test_selftest_stub.py  test_simulate.py  test_simulate_predict.py  test_train_step.py  test_transforms_normalization.py  test_validation.py  test_visualization.py
tests/e2e/: test_browser_detect.py
tests/reference_outputs/: metadata_cpu_pytorch.json  msdeformattn_output_cpu_pytorch.npy  msdeformattn_output_cuda.npy
