[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moldetr"
version = "1.0.0"
description = "1D Deformable DETR for automated detection of NMR multiplets in 1H spectra (MolDeTr)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Nicolas Schmid" }]
keywords = ["NMR", "multiplet detection", "deformable DETR", "deep learning", "spectroscopy"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

# Core runtime dependencies (imported by the moldetr package itself).
# Loosely pinned for portability; see requirements-lock-linux64.txt for the
# exact CUDA-11.7 conda environment used to train the released checkpoint.
dependencies = [
    "torch>=1.13",
    "fastai>=2.7,<2.8",  # fastai 2.8.x + fastcore 2.x drops L.starmap -> learner.load() crashes; 2.7.x pins fastcore<2
    "hydra-core>=1.2",
    "omegaconf>=2.2",
    "numpy>=1.23",
    "scipy>=1.9",
    "matplotlib>=3.5",
    "multipledispatch>=0.6",
    "adjustText>=1.0",  # moldetr.visualization de-conflicts multiplet labels on every detection
]

[project.optional-dependencies]
# Extra deps used only by the evaluation / plotting scripts in scripts/.
eval = [
    "pandas>=1.5",
    "scikit-learn>=1.1",
    "seaborn>=0.12",
    "cmcrameri>=1.5",
]
app = [
    "gradio>=6.0,<7",
    "plotly>=5",  # interactive spectrum in the Gradio GUI (plotting.spectrum_figure)
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
# Opt-in Playwright browser e2e (tests/e2e/, run with `-m browser`; needs `playwright install chromium`).
browser = [
    "pytest-playwright>=0.5",
]

[project.urls]
Homepage = "https://github.com/smidooo/MolDeTr"
Paper = "https://doi.org/10.1021/acs.analchem.5c03465"
Software = "https://doi.org/10.5281/zenodo.21214876"
Data = "https://doi.org/10.5281/zenodo.21217101"

[tool.setuptools.packages.find]
include = ["moldetr*"]

[tool.setuptools.package-data]
# Ship the deformable-attention op sources so the CUDA extension can be built.
"moldetr.model.ops" = [
    "make.sh",
    "src/*.h",
    "src/*.cpp",
    "src/cpu/*",
    "src/cuda/*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Research code: keep the gate light. Focus on real errors, not style churn.
select = ["E", "F", "W"]
ignore = ["E501", "E741", "W605", "E402", "F403", "F405", "E731", "E722", "F811", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Markers keep the heavy/opt-in suites out of the default run. `model` needs the 974 MB checkpoint
# (local only); `browser` needs `playwright install` (opt-in); `e2e` launches an in-process Gradio app.
markers = [
    "unit: fast, weight-free unit test (CI default)",
    "e2e: in-process gradio_client end-to-end test (needs the .[app] extra)",
    "browser: Playwright browser test (opt-in; needs `playwright install`)",
    "model: requires the real 974 MB checkpoint (local only)",
    "data: requires Zenodo spectra not in a clean clone (local only)",
    "slow: slow test",
]
